# cnncalc

./: .gitignore  LICENSE  README.rst  pylintrc  setup.cfg  setup.py
examples/: cnn.json  cnn.yaml
src/cnncalc/: main.py
