[metadata]
name = cnncalc
version = 0.1
description = Calculates convnet layer sizes and receptive
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6


[options]
include_package_data = True
package_dir =
    =src
packages = find:


[options.packages.find]
where = src





